add unit and E2E tests
